--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,7 @@
     <mat-tab label="Favorite">
         <app-favorite></app-favorite>
     </mat-tab>
+    <mat-tab label="Bank">
+        <app-bank></app-bank>
+    </mat-tab>
 </mat-tab-group>
